[package]
name = "acme2-slim"
description = "AcmeV2 Support, based on acme-client crate by Onur Aslan"
version = "0.2.0"
authors = ["Onur Aslan <onur@onur.im>","Adam Shaw <discourse@gmail.com>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "README.md"
repository = "https://github.com/cyclopunk/acme2-slim"
edition = "2018"

[dependencies]
error-chain = "0.12"
log = "0.4"
serde = {version = "1.0.117", features=["derive"]}
serde_json = "1.0.59"
serde_derive = "1.0"
base64 = "0.13.0"
hyper = "0.14.2"
reqwest = { version = "0.11.0", features = ["json"] }
openssl = "0.10"
env_logger = { version = "0.8.1"}
tokio = { version = "1.1.0", features = [ "full" ] }

warp = {version = "0.3.0"}
[dev-dependencies]
env_logger = "0.8.1"

[features]
